// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When I get ad units from a given config with size mappings the result is correct 1`] = `
Array [
  Object {
    "bids": Array [
      Object {
        "bidder": "bidder-foo",
        "params": Object {
          "foo": "bar",
        },
      },
    ],
    "code": "div-gpt-ad-foo",
    "mediaTypes": Object {
      "banner": Object {
        "sizes": Array [
          Array [
            320,
            240,
          ],
        ],
      },
    },
  },
  Object {
    "bids": Array [
      Object {
        "bidder": "bidder-bar",
        "params": Object {
          "bar": "foo",
        },
      },
    ],
    "code": "div-gpt-ad-bar",
    "mediaTypes": Object {
      "banner": Object {
        "sizes": Array [
          Array [
            320,
            240,
          ],
        ],
      },
    },
    "sizeMapping": Array [
      Object {
        "minWidth": 1050,
        "sizes": Array [],
      },
      Object {
        "minWidth": 320,
        "sizes": Array [
          Array [
            300,
            250,
          ],
          Array [
            320,
            50,
          ],
        ],
      },
      Object {
        "minWidth": 0,
        "sizes": Array [],
      },
    ],
  },
]
`;

exports[`When I get ad units from a given config without size mappings the result is correct 1`] = `
Array [
  Object {
    "bids": Array [
      Object {
        "bidder": "bidder-foo",
        "params": Object {
          "foo": "bar",
        },
      },
    ],
    "code": "div-gpt-ad-foo",
    "mediaTypes": Object {
      "banner": Object {
        "sizes": Array [
          Array [
            320,
            240,
          ],
        ],
      },
    },
  },
  Object {
    "bids": Array [
      Object {
        "bidder": "bidder-bar",
        "params": Object {
          "bar": "foo",
        },
      },
    ],
    "code": "div-gpt-ad-bar",
    "mediaTypes": Object {
      "banner": Object {
        "sizes": Array [
          Array [
            320,
            240,
          ],
        ],
      },
    },
  },
]
`;
